--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>Trying to force your way onto my GitHub pages ah?</h1>
+        <p>Skill issue.</p>
+        <p>Never gonna give you up! :D</p>
     </body>
 </html>
