--- a/index.html
+++ b/index.html
@@ -1,8 +1,94 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Trying to brute force your way onto my GitHub pages ah?</h1>
-        <p>Skill issue.</p>
-        <p>Never gonna give you up! :D</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ethan Lim</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
+</head>
+<body>
+  <!-- Introduction -->
+  <div class="intro">
+    <span>
+    <h1><span id="greeting"></span>, I am Ethan.</h1>
+    <p class="bio">I am a 16-year-old student studying in Singapore. <br> I am strongly interested in computers, cars and trains. <br> My hobbies are programming and photography.</p></span>
+  <!-- Contact me -->
+    <span class="socials">
+      <div><i data-lucide="message-square" class="msg"></i></div>
+      <div><i data-lucide="mail" class="mail"></i></div>
+      <div><i data-lucide="github" class="github"></i></div>
+    </span>
+  </div>
+  <hr>
+    <!-- Achievements -->
+    <div class="achievements">
+    <div id="window" class="window">
+    <span class="ach-header">
+      <i data-lucide="trophy" class="trophy"></i>
+      <h3 class="trophy">ACHIEVEMENTS</h3>
+      </span>
+        <div class="ach-top-bar">
+          <span class="ach-item-holder"><span id="acad" class="ach-item">Academics</span></span>
+          <span class="ach-item-holder"><span id="sci-res" class="ach-item">Science Research</span></span>
+          <span class="ach-item-holder"><span id="prog" class="ach-item">Computer Science</span></span>
+          <span class="ach-item-holder"><span id="photo" class="ach-item">Photography</span></span>
+        </div>
+          <span id="all-achievements" class="ach-list"></span>
+      </div>
+    </div>
+
+  <!-- Experience -->
+  <div class="experience">  
+    <div id="window" class="window">
+      <span class="ach-header">
+        <i data-lucide="graduation-cap" class="graduation-cap"></i>
+        <h3 class="graduation-cap">EXPERIENCE (to be updated)</h3>
+        </span>
+          <div class="ach-top-bar">
+            <span class="ach-item-holder"><span id="CCA" class="ach-item">CCA</span></span>
+            <span class="ach-item-holder"><span id="rich" class="ach-item">Enrichment</span></span>
+            <span class="ach-item-holder"><span id="oth" class="ach-item">Others</span></span>
+          </div>
+            <span id="all-achievements" class="ach-list"></span>
+  </div>
+</div>
+<!-- JavaScript Code -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+  <script>
+      lucide.createIcons();
+  </script>
+  <script src="app.js"></script>
+
+</body>
 </html>
+
+
+
+    <!-- Skills -->
+    <!-- <h2 class="header">S K I L L S</h2>
+    <div class="skills-list">
+      <div class="skills-column">
+        <h3 class="skill-title">Programming</h3>
+        <ul>
+          <span class="skill-item"><li><img src="https://cdn-icons-png.flaticon.com/512/5968/5968371.png" class="icon" alt="Swift Development Language"></img>Swift</li>
+          <span class="skill-item"><li><img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" class="icon" alt="Python"></img>Python</li>
+          <span class="skill-item"><li><img src="https://cdn-icons-png.flaticon.com/512/9883/9883837.png" class="icon" alt="Web Development"></img>Web development (HTML, CSS, JS)</li>
+
+        </ul>
+      </div>
+      <div class="skills-column">
+        <h3 class="skill-title">Design</h3>
+        <ul>
+          <li>Figma</li>
+          <li>Shapr3D</li>
+          <span class="skill-item"><li><img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" class="icon" alt="Python"></img>Figma</li>
+        </ul>
+      </div>
+      <div class="skills-column">
+        <h3 class="skill-title">Others</h3>
+        <ul>
+          <span class="skill-item"><li><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fis5-ssl.mzstatic.com%2Fimage%2Fthumb%2FPurple118%2Fv4%2F63%2F1c%2F21%2F631c21ee-a782-3579-e1f4-3a10108f01d7%2Fsource%2F512x512bb.png&f=1&nofb=1&ipt=4ee7926243bfc9a3339796550df28ddad04c6cd646e7c5872e45607b5d545b51&ipo=images"class="icon" alt="DaVinci Resolve"></img>DaVinci Resolve</li>
+        </ul>
+      </div>
+    </div> -->
