--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="intro">
     <span>
     <h1><span id="greeting"></span>, I am Ethan.</h1>
-    <p class="bio">I am a 16-year-old student studying in Singapore. <br> I am strongly interested in computers, cars and trains. <br> My hobbies are programming and photography.</p></span>
+    <p class="bio">I am a 16-year-old student studying in Singapore. <br> I am strongly interested in coding and engineering.</p></span>
   <!-- Contact me -->
     <span class="socials">
       <div><i data-lucide="message-square" class="msg"></i></div>
